# kara

./: .gitignore  CMakeLists.txt  README.md  import_test.qml  install.sh  test.qml
.github/assets/pkgbuild/: PKGBUILD.template
.github/workflows/: archlinux.yml  debian14.yml  fedora.yml  kara-ci.yml  kde-neon-user.yml  kdeneon-user.yml  kubuntu.yml  opensuse-tw.yml  release-ci.yml  release.yml
cmake/: CPackLists.cmake  metadata.json.cmake
package/: metadata.json
plugin/: CMakeLists.txt
